[gd_scene load_steps=22 format=3 uid="uid://cdujb3logtxwj"]

[ext_resource type="Script" path="res://scenes/enemies/hunter.gd" id="1_dd5os"]
[ext_resource type="Texture2D" uid="uid://7vtr40ba8j34" path="res://graphics/enemies/hunter/parts/torso.png" id="2_73tvm"]
[ext_resource type="Texture2D" uid="uid://df8b578ybq0l8" path="res://graphics/enemies/hunter/parts/leg_front_inner.png" id="3_c52pr"]
[ext_resource type="Texture2D" uid="uid://cqm0ixhp2lbrt" path="res://graphics/enemies/hunter/parts/leg_front_outer.png" id="4_2xfgm"]
[ext_resource type="Texture2D" uid="uid://d4lkferyujc8m" path="res://graphics/enemies/hunter/parts/head.png" id="5_jv7go"]
[ext_resource type="Texture2D" uid="uid://gktldevpndal" path="res://graphics/enemies/hunter/parts/leg_back_inner.png" id="6_biga4"]
[ext_resource type="Texture2D" uid="uid://dqgcdbbry4xdo" path="res://graphics/enemies/hunter/parts/claw.png" id="6_henox"]
[ext_resource type="Texture2D" uid="uid://vw24xsiyoiqo" path="res://graphics/enemies/hunter/parts/leg_back_outer.png" id="7_mbgxb"]
[ext_resource type="AudioStream" uid="uid://b45i4rrogdruf" path="res://audio/organic_impact.mp3" id="9_62yyj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u6xfk"]
radius = 36.0
height = 324.0

[sub_resource type="CircleShape2D" id="CircleShape2D_15m2a"]
radius = 145.417

[sub_resource type="CircleShape2D" id="CircleShape2D_rpccx"]
radius = 1364.21

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_vvs85"]
resource_name = "Front Right Leg"
target_nodepath = NodePath("../Targets/FrontRight")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/FrontRightLeg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/FrontRightLeg/FrontRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_qpv7d"]
resource_name = "Front Left Leg"
target_nodepath = NodePath("../Targets/FrontLeft")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Torso/FrontLeftLeg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Torso/FrontLeftLeg/FontLeftClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_yhp7j"]
target_nodepath = NodePath("../Targets/BackRight")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/BackRightLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/BackRightLeg/BackRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_n1dfj"]
target_nodepath = NodePath("../Targets/BackLeft")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/BackLeftLeg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/BackLeftLeg/BackLeftClaw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_vejo6"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_vvs85")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_qpv7d")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_yhp7j")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_n1dfj")

[sub_resource type="Animation" id="Animation_wlvfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/Head/RightClaw:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/Head/LeftClaw:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yridr"]
resource_name = "attack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/Head/RightClaw:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0472, -0.436332, -0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/Head/LeftClaw:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.0472, 0.436345, 0.349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 32), Vector2(0, -35), Vector2(0, -25), Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_5x7sa"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Targets/FrontRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(65, -256), Vector2(88, -158), Vector2(52, -135), Vector2(93, -201), Vector2(65, -256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Targets/FrontLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-58, -146), Vector2(-82, -219), Vector2(-63, -267), Vector2(-99, -219), Vector2(-58, -146)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Targets/BackRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(9, 138), Vector2(88, 121), Vector2(163, 90), Vector2(127, 115), Vector2(9.00001, 138)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Targets/BackLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-114, 112), Vector2(-178, 68), Vector2(-97, 118), Vector2(-23, 136), Vector2(-97, 110)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Torso/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.112909, 0.0972276]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6gpk"]
_data = {
"RESET": SubResource("Animation_wlvfa"),
"attack": SubResource("Animation_yridr"),
"walk": SubResource("Animation_5x7sa")
}

[node name="Hunter" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_dd5os")
metadata/_edit_horizontal_guides_ = [-23.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -68)
shape = SubResource("CapsuleShape2D_u6xfk")

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-9, -192)
shape = SubResource("CircleShape2D_15m2a")

[node name="NoticeArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_rpccx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="NavigationTimer" type="Timer" parent="Timers"]
autostart = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Targets" type="Node2D" parent="."]

[node name="FrontRight" type="Marker2D" parent="Targets"]
position = Vector2(96, -220)

[node name="FrontLeft" type="Marker2D" parent="Targets"]
position = Vector2(-117, -227)

[node name="BackRight" type="Marker2D" parent="Targets"]
position = Vector2(77, 133)

[node name="BackLeft" type="Marker2D" parent="Targets"]
position = Vector2(-100, 116)

[node name="Skeleton2D" type="Skeleton2D" parent="."]
rotation = 0.0396825
modification_stack = SubResource("SkeletonModificationStack2D_vejo6")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso"]
position = Vector2(7, 0)
texture = ExtResource("2_73tvm")
metadata/_edit_lock_ = true

[node name="FrontRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(30, -81)
rotation = 1.03568
scale = Vector2(0.999991, 0.999991)
rest = Transform2D(0.9136, 0.406466, -0.406466, 0.9136, 30, -81)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(20.367, -40.2396)
texture = ExtResource("3_c52pr")

[node name="FrontRightClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(39.9355, -69.3273)
rotation = -2.2035
scale = Vector2(0.999894, 0.999894)
rest = Transform2D(0.40064, -0.916186, 0.916186, 0.40064, 39.9355, -69.3273)
auto_calculate_length_and_angle = false
length = 110.524
bone_angle = -56.617

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg/FrontRightClaw"]
position = Vector2(44.1854, -34.9817)
texture = ExtResource("4_2xfgm")

[node name="FrontLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-27, -79)
rotation = -0.999553
rest = Transform2D(0.764128, -0.644989, 0.644989, 0.764128, -27, -79)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-20.4266, -37.8517)
scale = Vector2(-1, 1)
texture = ExtResource("3_c52pr")

[node name="FontLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-44, -65)
rotation = 1.7317
scale = Vector2(1, 1)
rest = Transform2D(0.289216, 0.957211, -0.957211, 0.289216, -44, -65)
auto_calculate_length_and_angle = false
length = 118.776
bone_angle = -121.31

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg/FontLeftClaw"]
position = Vector2(-46.2194, -38.0931)
scale = Vector2(-1, 1)
texture = ExtResource("4_2xfgm")

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(1, -99)
rotation = -0.187718
scale = Vector2(0.999818, 0.999818)
rest = Transform2D(0.998, -0.0603275, 0.0603275, 0.998, 1, -99)
auto_calculate_length_and_angle = false
length = 118.631
bone_angle = -90.0

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-0.999227, -55.5219)
rotation = -0.00161649
scale = Vector2(1, 0.993831)
texture = ExtResource("5_jv7go")

[node name="RightClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(17.2651, -79.7365)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/RightClaw"]
z_index = -1
position = Vector2(22.6783, -42.6462)
texture = ExtResource("6_henox")

[node name="LeftClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-19.7303, -80.3226)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/LeftClaw"]
z_index = -1
position = Vector2(-21.3162, -43.3431)
scale = Vector2(-1, 1)
texture = ExtResource("6_henox")

[node name="BackRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(29, -56)
rotation = 0.12314
scale = Vector2(1, 1)
rest = Transform2D(0.960896, -0.276702, 0.276702, 0.960896, 29, -56)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(16.7372, 36.6725)
rotation = -0.15058
texture = ExtResource("6_biga4")

[node name="BackRightClaw" type="Bone2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(36, 70)
rest = Transform2D(0.956479, 0.291671, -0.291671, 0.956479, 36, 70)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg/BackRightClaw"]
position = Vector2(34.1472, 45.3841)
texture = ExtResource("7_mbgxb")

[node name="BackLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-29, -55)
rotation = -0.0539359
rest = Transform2D(0.979078, 0.203233, -0.203233, 0.979078, -29, -55)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-17, 34)
scale = Vector2(-1, 1)
texture = ExtResource("6_biga4")

[node name="BackLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-35, 69)
rest = Transform2D(0.68708, -0.726543, 0.726543, 0.68708, -35, 69)
auto_calculate_length_and_angle = false
length = 118.831
bone_angle = 116.505

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg/BackLeftClaw"]
position = Vector2(-34.3595, 46.8314)
scale = Vector2(-1, 1)
texture = ExtResource("7_mbgxb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x6gpk")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_62yyj")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="Timers/NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
